# PolyCon

./: .gitignore  CMakeLists.txt  README.md  main.cpp  polygon_construction.cpp  polygon_construction.h  result.json  visualizer.py
dcel/: dcel.cpp  dcel.h
